<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Campo Nombre -->
        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre_receta"
            android:background="@drawable/bg_text"
            android:padding="12dp"
            android:textSize="16sp"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOutline" />

        <!-- Campo Ingredientes -->
        <EditText
            android:id="@+id/et_ingredientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Ingredientes"
            android:background="@drawable/bg_text"
            android:padding="12dp"
            android:textSize="16sp"
            android:minHeight="100dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOutline" />

        <!-- Campo Pasos -->
        <EditText
            android:id="@+id/et_pasos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Pasos"
            android:background="@drawable/bg_text"
            android:padding="12dp"
            android:textSize="16sp"
            android:minHeight="100dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOutline" />

        <!-- Contenedor para la imagen -->
        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="6dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/iv_imagen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_placeholder"/>
        </androidx.cardview.widget.CardView>

        <!-- Botones de imagen -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <!-- Botón Tomar foto -->
            <Button
                android:id="@+id/btn_tomar_imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tomar_foto"
                android:background="@drawable/bg_button"
                android:padding="12dp"
                android:layout_marginEnd="8dp"
                android:textColor="?attr/colorOnSurface"
                android:textColorHint="?attr/colorOutline" />

            <!-- Botón Elegir imagen -->
            <Button
                android:id="@+id/btn_elegir_imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Elegir_imagen"
                android:background="@drawable/bg_button"
                android:padding="12dp"
                android:textColor="?attr/colorOnSurface"
                android:textColorHint="?attr/colorOutline" />
        </LinearLayout>

        <!-- Botón Guardar -->
        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Guardar_receta"
            android:background="@drawable/bg_button"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOutline" />

        <!-- Botón Volver -->
        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volver"
            android:background="@drawable/bg_button"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="?attr/colorOutline" />

    </LinearLayout>
</ScrollView>
